--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,10 @@ body {
 }
 
 
+/* --------------------------------------------------
+                        Header Section
+-------------------------------------------------- */
+
 
 .container {
     margin-bottom: 100px;
@@ -22,7 +26,6 @@ body {
     color: #ffffff;
     display: flex;
     border-radius: 20px;
-    /* border: 2px solid red; */
 
 }
 
@@ -32,28 +35,22 @@ body {
     margin-top: 25px;
     margin-left: 60px;
     margin-bottom: 60px;
-    /* padding-right: 20px; */
-    /* border: 2px solid red; */
 }
 
 
 .first-section-header {
     width: 100%;
-    /* border: 2px solid red; */
     font-size: 50px;
-    /* margin-bottom: 10px; */
-    line-height: 150%;
+    line-height: 120%;
     height: 250px;
 
 }
 
 .first-section-paragraph {
-    margin-top: -63px;
+    margin-top: -93px;
     font-size: 16px;
     font-weight: 200;
-    /* border: 2px solid red; */
 }
-
 
 
 .first-section-watch-live {
@@ -66,18 +63,12 @@ body {
     cursor: pointer;
 }
 
-.first-section-watch-live span:after {
-    /* position: absolute; */
-    /* opacity: 1; */
-    /* top: 0;
-        right: -20px; */
-}
+.first-section-watch-live span:after {}
 
 .first-section-watch-live:hover span {
-    padding-right: 52%;
+    padding-right: 50%;
     transition-duration: 2s;
 }
-
 
 
 .first-section-div-3 {
@@ -85,8 +76,6 @@ body {
     margin-top: 11px;
     margin-right: 30px;
     padding-left: 30px;
-    /* border: 2px solid red; */
-
 }
 
 .first-section-div-3 img {
@@ -94,8 +83,9 @@ body {
 }
 
 
-/* ----------------------------- */
-/* main section */
+/* --------------------------------------------------
+                    Main Section
+-------------------------------------------------- */
 
 
 .second-section-div-1 {
@@ -103,21 +93,15 @@ body {
     height: 700px;
     margin: 50px 120px;
     display: flex;
-    /* border: 2px solid red; */
 }
-
-
 
 
 .second-section1 {
-    /* border: 2px solid red; */
     width: 24%;
-
-
 }
 
-.second-section-div-2 {
 
+.second-section-div-2 {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -128,8 +112,6 @@ body {
     border: 2px solid #e8e8e8;
     height: 220px;
     border-radius: 10px;
-    /* border: 2px solid blue; */
-
 }
 
 
@@ -137,10 +119,10 @@ body {
     text-decoration: none;
     padding: 15px 25px;
     border-radius: 10px;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 16px;
-    color: #ffffff;
-    background-color: #dd0000;
+    color: #161616;
+    background-color: #FFFFFF;
     line-height: 30px;
 }
 
@@ -158,21 +140,19 @@ body {
 
 .blog {
     text-decoration: none;
-    background-color: #ffffff;
+    background-color: #dd0000;
     padding: 15px 25px;
     border-radius: 10px;
     font-size: 16px;
-    color: #161616;
+    color: #FFFFFF;
     font-weight: 700;
     line-height: 30px;
 }
 
 .second-section2 {
-    /* border: 2px solid red; */
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     width: 76%;
-    /* height: 500px; */
 }
 
 .second-section-div-3 {
@@ -180,74 +160,12 @@ body {
     height: 320px;
     border-radius: 10px;
     margin-left: 4%;
-    /* border: 2px solid blue; */
-
-
 }
+
 
 .blog-image img {
     width: 100%;
 }
-
-.second-section-div-3-1 {
-    /* border: 2px solid blue; */
-    height: 220px;
-
-}
-
-.blog-image2 {
-    display: flex;
-    /* border: 2px solid blue; */
-    margin-left: 35px;
-    margin-top: 25px;
-}
-
-.germany {
-    width: 30%;
-    /* border: 2px solid blue; */
-    height: 60px;
-}
-
-.germany img {
-
-    height: 60px;
-}
-
-.france {
-    width: 30%;
-    /* border: 2px solid blue; */
-    height: 60px;
-}
-
-.france img {
-    height: 60px;
-}
-
-/* .blog-image2 img {
-    width: 30%;
-
-    margin-left: 20px;
-    margin-top: 10px;
-} */
-
-/* .second-section-header-1-1 {
-    margin-right: 2px;
-} */
-
-.second-section-header-1-2 {
-    font-weight: 700;
-    font-size: 19px;
-    /* border: 2px solid red; */
-    margin-top: -5px;
-
-}
-
-.second-section-paragraph-1-1 {
-    text-align: center;
-    margin-right: 10px;
-    /* border: 2px solid red; */
-}
-
 
 
 .blog-info {
@@ -264,13 +182,13 @@ body {
     background-color: #ffffff;
     border-radius: 5px;
     font-weight: 500;
+    cursor: pointer;
 
 }
 
 .second-section-paragraph-1 {
     font-weight: 700;
 }
-
 
 .span-gap {
     color: rgba(22, 22, 22, 0.7);
@@ -282,7 +200,7 @@ body {
 
 
 .view-all {
-    display: none;
+    visibility: hidden;
 }
 
 .footer {
@@ -291,7 +209,6 @@ body {
     background-color: #161616;
 
 }
-
 
 
 .goal {
@@ -333,13 +250,89 @@ hr {
     margin-left: 10px;
 }
 
+/* ---------------------------------------
+        Upcoming Match File
+--------------------------------------- */
 
-/* Responsive */
+.second-section-div-3-1 {
+    height: 220px;
+}
+
+.blog-image2 {
+    display: flex;
+    margin-left: 35px;
+    margin-top: 25px;
+}
+
+.germany {
+    width: 30%;
+    height: 60px;
+}
+
+.germany img {
+    height: 60px;
+}
+
+.france {
+    width: 30%;
+    height: 60px;
+}
+
+.france img {
+    height: 60px;
+}
+
+.second-section-header-1-2 {
+    font-weight: 700;
+    font-size: 19px;
+    margin-top: -5px;
+
+}
+
+.second-section-paragraph-1-1 {
+    text-align: center;
+    margin-right: 10px;
+}
+
+.upcoming-match {
+    text-decoration: none;
+    padding: 15px 25px;
+    border-radius: 10px;
+    font-weight: 700;
+    font-size: 16px;
+    color: #FFFFFF;
+    background-color: #dd0000;
+    line-height: 30px;
+}
+
+.all-group {
+    text-decoration: none;
+    padding: 15px 25px;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: 700;
+    color: black;
+    background-color: #ffffff;
+    line-height: 30px;
+}
+
+
+.blog {
+    text-decoration: none;
+    background-color: #FFFFFF;
+    padding: 15px 25px;
+    border-radius: 10px;
+    font-size: 16px;
+    color: #161616;
+    font-weight: 700;
+    line-height: 30px;
+}
+
+/* ---------------------------------------
+                Responsive
+--------------------------------------- */
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-
-
-
 
     .first-section-div-1 {
         width: 85%;
@@ -355,13 +348,11 @@ hr {
 
     .first-section-div-2 {
         width: 50%;
-        /* border: 2px solid red; */
     }
 
 
     .first-section-header {
         width: 100%;
-        /* border: 2px solid red; */
         font-size: 35px;
         line-height: 150%;
         height: 200px;
@@ -372,7 +363,6 @@ hr {
         margin-top: -65px;
         font-size: 16px;
         font-weight: 200;
-        /* border: 2px solid red; */
     }
 
 
@@ -381,7 +371,6 @@ hr {
         margin-top: 33px;
         margin-right: 40px;
         padding-left: 30px;
-        /* border: 2px solid red; */
     }
 
     .first-section-div-3 img {
@@ -389,42 +378,26 @@ hr {
     }
 
 
-    /* ----------------------------- */
-    /* main section */
-
     .second-section-div-1 {
         width: 85%;
         height: 800px;
-        /* margin: 0px 120px; */
         flex-direction: column;
-        /* border: 2px solid red; */
         margin-top: -30px;
         margin-left: 50px;
-
     }
-
-
 
 
     .second-section1 {
-        /* border: 2px solid red; */
         width: 100%;
-
     }
 
     .second-section-div-2 {
-        /* width: 100%; */
         display: flex;
-
-        /* flex-wrap: wrap; */
         justify-content: space-between;
         padding: 20px;
-        /* text-align: center; */
         background-color: #FFFFFF;
-        /* border: 2px solid #e8e8e8; */
         height: 50px;
-        border-radius: 10px;
-        /* border: 2px solid blue; */
+        border: none;
         position: relative;
 
     }
@@ -477,7 +450,6 @@ hr {
     }
 
     .second-section2 {
-        /* border: 2px solid red; */
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         width: 96%;
@@ -489,10 +461,9 @@ hr {
 
     .second-section-div-3 {
         border: 2px solid #e8e8e8;
-        height: 320px;
+        height: 330px;
         border-radius: 10px;
         margin-left: 5%;
-        /* border: 2px solid blue; */
         margin-top: 20px;
 
 
@@ -501,7 +472,6 @@ hr {
     .blog-image img {
         width: 100%;
     }
-
 
 
     .blog-info {
@@ -543,11 +513,60 @@ hr {
         color: white;
         cursor: pointer;
         margin-left: 42%;
+        visibility: visible;
     }
 
+    .footer {
+        width: 100%;
+        height: 844px;
+        background-color: #161616;
+        margin-top: 100px;
+
+    }
+
+
+    .goal {
+        color: #FFFFFF;
+        font-size: 40px;
+        font-weight: 600;
+        text-align: center;
+    }
+
+    hr {
+        color: #FFFFFF;
+        border: 0.5px solid rgba(255, 255, 255, 0.1);
+        width: 80%;
+        margin-top: -40px;
+
+    }
+
+    .footer-info {
+        color: #B9B9B9;
+        display: flex;
+        width: 90%;
+        justify-content: space-evenly;
+        font-weight: 500;
+        font-size: 16px;
+        margin-left: 50px;
+    }
+
+    .icon {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+
+    }
+
+    .icon a {
+        color: #FFFFFF;
+        font-size: 50px;
+        margin-left: 10px;
+    }
 }
 
-
+/* --------------------------------------------------
+                    Mobile section
+-------------------------------------------------- */
 @media only screen and (max-width: 767px) {
     .first-section-div-1 {
         flex-direction: column;
@@ -701,7 +720,7 @@ hr {
     }
 
     .view-all {
-        display: none;
+        visibility: hidden;
     }
 
 
