--- a/styles/style.css
+++ b/styles/style.css
@@ -90,9 +90,10 @@ body {
 
 .second-section-div-1 {
     width: 80%;
-    height: 700px;
+    height: 650px;
     margin: 50px 120px;
     display: flex;
+    position: relative;
 }
 
 
@@ -112,6 +113,8 @@ body {
     border: 2px solid #e8e8e8;
     height: 220px;
     border-radius: 10px;
+    position: sticky;
+    top: 100px;
 }
 
 
